k8s/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: leetcode
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
